--- a/prep/.vscode/launch.json
+++ b/prep/.vscode/launch.json
@@ -7,9 +7,11 @@
         {
             "name": "Dart & Flutter",
             "request": "launch",
-            "type": "dart"
-       
+            "type": "dart",
+            "console": "terminal",
+            "program": "${file}"
             
+
         }
     ]
 }
